# libbattlecreek

./: CMakeLists.txt  Readme.markdown
cmake/: FindBSON.cmake  FindDaylite.cmake
include/battlecreek/: analog.hpp  battlecreek.hpp  digital.hpp  motor.hpp  servo.hpp
src/: accel_state.bsonbind  analog.cpp  analog_states.bsonbind  battery_state.bsonbind  battlehill_state.bsonbind  button_states.bsonbind  camera_config.bsonbind  channel_config.bsonbind  digital.cpp  digital_states.bsonbind  frame_data.bsonbind  gyro_state.bsonbind  imu_state.bsonbind  motor.cpp  motor_state.bsonbind  motor_states.bsonbind  node.cpp  node.hpp  pid_state.bsonbind  pid_states.bsonbind  robot_states.bsonbind  servo.cpp  servo_states.bsonbind  set_battlehill_state.bsonbind  set_digital_state.bsonbind  set_gyro_state.bsonbind  set_motor_state.bsonbind  set_pid_state.bsonbind  set_servo_state.bsonbind  settings.bsonbind  test.bsonbind
